# remote_shell

./: .gitignore  Cargo.toml  README.md  history.txt
data/: test.py
src/: bin.rs  lib.rs  main.rs
src/common/: cmd.rs  mod.rs  myfs.rs  order.rs  subpub.rs  test.rs  utils.rs
src/host/: cmd_process.rs  command.rs  history.rs  history_process.rs  mod.rs  process.rs  shell.rs  shell_process.rs  trans.rs
src/slave/: mod.rs  process_cmds.rs  rec.rs  slave_entrance.rs  stream_cmd.rs  sync_cmd.rs
test/: test.py
