[package]
name = "remote_shell"
version = "0.2.4"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "remote shell written by rust."
license = "MIT"
homepage = "https://github.com/wangmarkqi/remote_shell.git"
repository = "https://github.com/wangmarkqi/remote_shell.git"
documentation = "https://github.com/wangmarkqi/remote_shell.git"
[lib]
name = "remote_shell"
path = "src/lib.rs"
[[bin]]
name = "remote_shell"
path = "src/bin.rs"

[dependencies]
anyhow="1.0.31"
#serde_derive = "1.0.90"
serde = { version = "1.0", features = ["derive"] }
system_shutdown = "3.0.0"
crossterm = "0.18.0"
async-std = "1.6.2"
udp_hole_punching = { git= "https://github.com/wangmarkqi/udp_hole_punching",version="2.0.4"}
async-trait="0.1.36"
bincode="1.3.1"