[package]
name = "remote_shell"
version = "2.0.0"
authors = ["wangmarkqi <wangalexqi@126.com>"]
edition = "2018"
description = "remote shell written by rust."
license = "MIT"
homepage = "https://github.com/wangmarkqi/remote_shell.git"
repository = "https://github.com/wangmarkqi/remote_shell.git"
documentation = "https://github.com/wangmarkqi/remote_shell.git"
[lib]
name = "remote_shell"
path = "src/lib.rs"
[[bin]]
name = "remote_shell"
path = "src/bin.rs"

[dependencies]
anyhow="1.0.31"
serde = { version = "1.0", features = ["derive"] }
bincode="1.3.1"
system_shutdown = "3.0.0"
crossterm = "0.18.0"
udp_hole_punching = "2.0.8"
